--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!doctype html>
 <html>
-  <head>
+ <head>
+    <meta charset='utf-8'/>
+    <meta name='description' content='sprout.co'/>
+    <meta name='author' content='dylandy.chang'/>
     <link href='css/index.css' rel='stylesheet'/>
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500,700,400italic' rel='stylesheet' type='text/css'>
+    <title>發芽中...</title>
   </head>
   <body>
     <h1 id='big_logo'>sprout</h1>
