--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset='utf-8'/>
     <meta name='description' content='sprout.co'/>
     <meta name='author' content='dylandy.chang'/>
+    <link href='css/reset.css' rel='stylesheet'/>
     <link href='css/index.css' rel='stylesheet'/>
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500,700,400italic' rel='stylesheet' type='text/css'>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <title>發芽中...</title>
   </head>
   <body>
+   <section id='intro'>
     <h1 id='big_logo'>sprout</h1>
     <h3 id='doing'>網站正在發芽中</h3>
+   </section>
   </body>
 
 </html>
