自動調整視窗大小，並加入第二頁

--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
     <link href='css/index.css' rel='stylesheet'/>
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500,700,400italic' rel='stylesheet' type='text/css'>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src='js/index.js'></script>
     <title>發芽中...</title>
   </head>
   <body>
    <section id='intro'>
     <h1 id='big_logo'>sprout</h1>
     <h3 id='doing'>網站正在發芽中</h3>
+   </section>
+   <section id='team'>
+    <h1 class='team_font' id='team_title'>Who We Are</h1>
+    <div class='image' id='sprout'>
+      <img src='source/sprout.jpg' class='circular_img'/>
+    </div>
+    <h2 id='team_slogan'>苜蓿芽創意設計工作坊</h2>
    </section>
   </body>
 
