加想法頁及 favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'/>
     <meta name='description' content='sprout.co'/>
     <meta name='author' content='dylandy.chang'/>
+    <link rel="shortcut icon"  href="source/favicon.ico"/>
     <link href='css/reset.css' rel='stylesheet'/>
     <link href='css/index.css' rel='stylesheet'/>
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500,700,400italic' rel='stylesheet' type='text/css'>
@@ -14,10 +15,13 @@
   <body>
    <section id='intro'>
     <h1 id='big_logo'>sprout</h1>
-    <h3 id='doing'>網站正在發芽中</h3>
+    <h3 id='doing'>正在發芽中</h3>
+   </section>
+   <section id='thought'>
+    <h1 class='thought_font' id='thought_slogan'>What does it mean ?</h1>
    </section>
    <section id='team'>
-    <h1 class='team_font' id='team_title'>Who We Are</h1>
+    <h1 class='team_font' id='team_title'>Who we are ?</h1>
     <div class='image' id='sprout'>
       <img src='source/sprout.jpg' class='circular_img'/>
     </div>
