change footer background from black to green

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'/>
     <meta name='description' content='sprout.co'/>
     <meta name='author' content='dylandy.chang'/>
+    <meta name = "viewport" content = "user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
     <link rel="shortcut icon"  href="source/favicon.ico"/>
     <link href='css/reset.css' rel='stylesheet'/>
     <link href='css/index.css' rel='stylesheet'/>
