--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
     <h2 id='team_slogan'>苜蓿芽創意設計工作坊</h2>
    </section>
    <footer>
+    <p><b>sprout</b></p><hr style='width:80%'>
+    <div id='centered'>
+     <div class='one_third'></div>
+     <div class='one_third'></div>
+     <div class='one_third'></div>
+    </div>
    </footer>
   </body>
 </html>
