好像做了什麼但是我忘記了

--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
     <title>發芽中...</title>
   </head>
   <body>
+   <script>alert('請參加我們的市場調查，幫助我們把產品做的更好');</script>
    <section id='intro'>
     <h1 id='big_logo'>sprout</h1>
     <h3 id='doing'>正在發芽中</h3>
+    <a href='#latest'><h3 style='text-align:center;color:rgb(255, 239, 123);font-size:25px;padding-top:10px;'>請參加我們的市場調查</h3></a>
+   </section>
+   <section id='latest'>
+    <h1 class='thought_font' id='latest_slogan'>最新消息 Latest News</h1>
    </section>
    <section id='thought'>
     <h1 class='thought_font' id='thought_slogan'>What does it mean ?</h1>
