加上問卷並加大按鈕

--- a/index.html
+++ b/index.html
@@ -18,10 +18,19 @@
    <section id='intro'>
     <h1 id='big_logo'>sprout</h1>
     <h3 id='doing'>正在發芽中</h3>
-    <a href='#latest'><h3 style='text-align:center;color:rgb(255, 239, 123);font-size:25px;padding-top:10px;'>請參加我們的市場調查</h3></a>
+    <a href='#latest' id='to_latest'>
+     <h3>
+      請參加我們的市場調查
+      </h3>
+    </a>
    </section>
    <section id='latest'>
     <h1 class='thought_font' id='latest_slogan'>最新消息 Latest News</h1>
+    <div style='width:50%;margin:20px auto ;'>
+     <iframe src="https://docs.google.com/forms/d/11EUWd37zGHz0A_aPC8B7QS4rZ7c_uQ8sX5skOby9lwc/viewform?embedded=true" 
+      width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">
+      載入中…</iframe>
+    </div>
    </section>
    <section id='thought'>
     <h1 class='thought_font' id='thought_slogan'>What does it mean ?</h1>
