add circle button

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
   </head>
   <body>
    <section id='intro'>
-    <h1 id='big_logo'>sprout</h1>
-    <h3 id='doing'>正在發芽中</h3>
+    <h1 id='big_logo'>Lightup</h1>
+    <h2 style='text-align:center;color:white;margin-top:50px;font-size:30px'>苜蓿芽創意工坊</h2>
+    <div style='width:80%;margin:0 auto'>
+     <a id='to_page2' href='#latest'><b>↓</b></a>
+    </div>
    </section>
    <section id='latest'>
     <h1 class='thought_font' id='latest_slogan'>最新消息 Latest News</h1>
