--- a/index.html
+++ b/index.html
@@ -16,16 +16,26 @@
   <body>
    <section id='intro'>
     <h1 id='big_logo'>Lightup</h1>
-    <h2 style='text-align:center;color:white;margin-top:50px;font-size:30px'>苜蓿芽創意工坊</h2>
-    <div style='width:80%;margin:0 auto'>
+    <h2 style='text-align:center;color:white;margin-top:50px;font-size:30px'>點亮一段溫熱的回憶</h2>
+    <div class='centered'>
      <a id='to_page2' href='#latest'><b>↓</b></a>
     </div>
    </section>
    <section id='latest'>
-    <h1 class='thought_font' id='latest_slogan'>最新消息 Latest News</h1>
+    <div class='centered'>
+      <div id='para_intro'>
+       偌大的夜空，只有星星能與之媲美<br>
+       徜徉在知識無盡的書海中 閃爍的霓虹<br>
+       指引著我們未來的方向<br>
+       連接著畢業後的回憶與後現代的科技<br>
+       屬於我們的驕傲-light up<br>
+      </div>
+     </div>
    </section>
    <section id='thought'>
-    <h1 class='thought_font' id='thought_slogan'>What does it mean ?</h1>
+    <div class='centered'>
+     <h2></h2>
+    </div>
    </section>
    <section id='team'>
     <h1 class='team_font' id='team_title'>Who we are ?</h1>
@@ -36,7 +46,7 @@
    </section>
    <footer>
     <p><b>sprout</b></p><hr style='width:80%'>
-    <div id='centered'>
+    <div class='centered'>
      <div class='one_third'></div>
      <div class='one_third'></div>
      <div class='one_third'></div>
