page sizing and thought page content

--- a/index.html
+++ b/index.html
@@ -28,13 +28,18 @@
        徜徉在知識無盡的書海中 閃爍的霓虹<br>
        指引著我們未來的方向<br>
        連接著畢業後的回憶與後現代的科技<br>
-       屬於我們的驕傲-light up<br>
+       屬於我們的驕傲-Lightup<br>
       </div>
      </div>
    </section>
-   <section id='thought'>
+   <section id='thought' style='height:1000px'>
     <div class='centered'>
-     <h2></h2>
+     <h2>What is Lightup ?</h2>
+     <div>
+      身在師大這麼多年了，那些圖書館的點點滴滴，都如此的讓我們回憶
+      <div style='color:yellow'>回憶是溫熱的，就像燭光</div>
+      為了紀念這溫熱的回憶，苜蓿芽為您呈現 Lightup<br>
+     一盞回憶的夜燈</div>
     </div>
    </section>
    <section id='team'>
