add picture and simple setsumei

--- a/index.html
+++ b/index.html
@@ -35,11 +35,21 @@
    <section id='thought' style='height:1000px'>
     <div class='centered'>
      <h2>What is Lightup ?</h2>
-     <div>
+     <div id='second-intro'>
       身在師大這麼多年了，那些圖書館的點點滴滴，都如此的讓我們回憶
       <div style='color:yellow'>回憶是溫熱的，就像燭光</div>
       為了紀念這溫熱的回憶，苜蓿芽為您呈現 Lightup<br>
-     一盞回憶的夜燈</div>
+      一盞回憶的夜燈</div>
+     <img src='source/lib.png' height='300' width='300' style='float:right'/>
+     <div id='setsumei'>
+        <p>
+         <span style='font-size:30px'>商品規格</span><br>
+         名稱：Lightup 桌上型小夜燈<br>
+         大小：<br>
+         電源：USB<br>
+         客製化：預購商品能夠加上個性化文字與圖案<br>
+        </p>
+     </div>
     </div>
    </section>
    <section id='team'>
