--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1 id='big_logo'>Lightup</h1>
     <h2 style='text-align:center;color:white;margin-top:50px;font-size:30px'>點亮一段溫熱的回憶</h2>
     <div class='centered'>
-     <a id='to_page2' href='#latest'><b>↓</b></a>
+     <a class='to_page' href='#latest'><b>↓</b></a>
     </div>
    </section>
    <section id='latest'>
@@ -30,6 +30,7 @@
        連接著畢業後的回憶與後現代的科技<br>
        屬於我們的驕傲-Lightup<br>
       </div>
+      <a class='to_page' href='#thought'><b>↓</b></a>
      </div>
    </section>
    <section id='thought' style='height:1000px'>
@@ -45,12 +46,16 @@
         <p>
          <span style='font-size:30px'>商品規格</span><br>
          名稱：Lightup 桌上型小夜燈<br>
-         大小：<br>
-         電源：USB<br>
-         客製化：預購商品能夠加上個性化文字與圖案<br>
+         大小：12cm *12cm *10cm (長 *寬 *高)<br>
+         電源：USB 2.0 / 一般電源<br>
+         功能：USB 2.0 資料傳輸<br>
+         客製化：預購可加上個性化文字與圖案<br>
         </p>
-     </div>
-    </div>
+       </div>
+      </div>
+      <a class='button' href='#'> 
+       填寫預購單
+      </a>
    </section>
    <section id='team'>
     <h1 class='team_font' id='team_title'>Who we are ?</h1>
@@ -60,11 +65,14 @@
     <h2 id='team_slogan'>苜蓿芽創意設計工作坊</h2>
    </section>
    <footer>
-    <p><b>sprout</b></p><hr style='width:80%'>
-    <div class='centered'>
-     <div class='one_third'></div>
-     <div class='one_third'></div>
-     <div class='one_third'></div>
+    <div class='centered' style='width:70%'>
+     <p>
+      <span style='color:grey;font-size:30px'>Contact Us</span><br>
+      <a herf='mailto:steven80919@gmail.com' class='email'>steven80919@gmail.com</a><br>
+     </p>
+     <a herf='http://facebook.com'>
+      <img  class='social' src='source/facebook-icon.png' height='50' width='50'>
+     </a>
     </div>
    </footer>
   </body>
