footer finish and change sprout logo

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
    <section id='team'>
     <h1 class='team_font' id='team_title'>Who we are ?</h1>
     <div class='image' id='sprout'>
-      <img src='source/sprout.jpg' class='circular_img'/>
+      <img src='source/sprout.png' class='circular_img'/>
     </div>
     <h2 id='team_slogan'>苜蓿芽創意設計工作坊</h2>
    </section>
@@ -68,11 +68,17 @@
     <div class='centered' style='width:70%'>
      <p>
       <span style='color:grey;font-size:30px'>Contact Us</span><br>
-      <a herf='mailto:steven80919@gmail.com' class='email'>steven80919@gmail.com</a><br>
+      <a href='mailto:steven80919@gmail.com' class='email'>steven80919@gmail.com</a><br>
      </p>
-     <a herf='http://facebook.com'>
+     <a href='http://facebook.com'>
       <img  class='social' src='source/facebook-icon.png' height='50' width='50'>
      </a>
+     <a href='http://github.com/dylandy/sproutwebsite'>
+      <img  class='social' src='source/github-icon.svg' height='65' width='65' style='padding-top:10px'>
+     </a>
+     <div class='copy'>
+        <span>Copyright© 2014</span>
+      </div>
     </div>
    </footer>
   </body>
