--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500,700,400italic' rel='stylesheet' type='text/css'>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src='js/index.js'></script>
-    <title>發芽中...</title>
+    <title>Lightup 一段溫熱的回憶</title>
   </head>
   <body>
    <section id='intro'>
