--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <p>
          <span style='font-size:30px'>商品規格</span><br>
          名稱：Lightup 桌上型小夜燈<br>
-         大小：12cm *12cm *10cm (長 *寬 *高)<br>
+         大小：17cm *11cm *9cm  (長 *寬 *高)<br>
          電源：USB 2.0 / 一般電源<br>
-         功能：USB 2.0 資料傳輸<br>
+         功能：USB 2.0 資料傳輸、夜燈<br>
          客製化：預購可加上個性化文字與圖案<br>
         </p>
        </div>
