--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </p>
        </div>
       </div>
-      <a class='button' href='https://docs.google.com/forms/d/12acBpQXhAd4KnCm5xeeBH3xAxPnDvSD0K8Y4DKH2kro/viewform'> 
+      <a class='button' href='#'> 
        填寫預購單
       </a>
    </section>
