--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </p>
        </div>
       </div>
-      <a class='button' href='#'> 
+      <a class='button' href='source/預購單.pdf'> 
        填寫預購單
       </a>
    </section>
