change fill in form to null

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         </p>
        </div>
       </div>
-      <a class='button' href='source/預購單.pdf'> 
-       填寫預購單
+      <a class='button' href='#'> 
+       目前缺貨中
       </a>
    </section>
    <section id='team'>
